--- a/calculator.html
+++ b/calculator.html
@@ -6,9 +6,9 @@ function cubo() {
 var num = document.getElementById("n1");
 	num.value = Math.pow(num.value, 3);
 }
-function cuarta() {
+function seno() {
 var num = document.getElementById("n1");
-	num.value = Math.pow(num.value, 4);
+	num.value = sin(num.value);
 }
 </script>
 </head>
@@ -18,6 +18,6 @@ var num = document.getElementById("n1");
 Numero:
 <input type="text" id="n1"><p>
 <button onclick="cubo()"> x^3 </button>
-<button onclick="cuarta()"> x^4 </button>
+<button onclick="seno()"> seno </button>
 </body>
 </html>
